Fix page-padding on tablet screen

--- a/styles/base/_global.scss
+++ b/styles/base/_global.scss
@@ -129,6 +129,10 @@ p {
 
 .page-padding {
   padding: 0 20px;
+
+  @include tablet {
+    padding: 0 40px;
+  }
 }
 
 // Section text
